--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "strictPropertyInitialization": false,
+    "resolveJsonModule": true,
     "paths": {
       "@app/*": ["./src/app/*"],
       "@helpers/*": ["./src/helpers/*"],
